--- a/package.json
+++ b/package.json
@@ -9,16 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@headlessui/react": "^1.6.4",
+    "@mui/material": "^5.8.3",
+    "axios": "^0.27.2",
+    "datatables.net": "^1.12.1",
+    "datatables.net-dt": "^1.12.1",
+    "jquery": "^3.6.0",
     "next": "12.1.6",
+    "nookies": "^2.5.2",
+    "phosphor-react": "^1.4.1",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-data-table-component": "^7.5.2",
+    "react-dom": "18.1.0",
+    "react-hook-form": "^7.31.3",
+    "react-moment": "^1.1.2"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
+    "@types/jquery": "^3.5.14",
     "@types/node": "17.0.38",
     "@types/react": "18.0.10",
     "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.7",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.7.2"
   }
 }
